make nav animation work

--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
 </head>
 <body>
 
+  <nav>
+    <ul>
+      <li><a href="#" class="one">&nbsp;Option 1</a></li>
+      <li><a href="#" class="two">&nbsp;Option 2</a></li>
+      <li><a href="#" class="three">&nbsp;Option 3</a></li>
+      <li><a href="#" class="four">&nbsp;Option 4</a></li>
+      <li><a href="#" class="five">&nbsp;Option 5</a></li>
+    </ul>
+  </nav>
+
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 <script src="javascripts/plugins.js"></script>
 <script src="javascripts/scripts.js"></script>
